--- a/noodle/templates/index.html
+++ b/noodle/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Noodle</title>
+        <title></title>
     </head>
     <body>
-        <div id='container'></div>
+        Hello World!
     </body>
 </html>
