--- a/noodle/templates/events.html
+++ b/noodle/templates/events.html
@@ -2,4 +2,7 @@
 {% block content %}
 <h1> Events </h1>
 <p>Hi this is our events Tab!</p>
+<button onclick="loadEvents()" type="button" class="btn btn-primary btn-lg btn-block">
+    Load Events
+</button>
 {% endblock %}
