--- a/noodle/templates/base.html
+++ b/noodle/templates/base.html
@@ -5,22 +5,24 @@
         <title>Noodle! a nice doodle!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap-datepicker.min.css') }}">
         <script src="{{ url_for('static', filename='bootstrap/js/jquery-2.2.4.min.js') }}"></script>
         <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+        <script src="{{ url_for('static', filename='bootstrap/js/bootstrap-datepicker.min.js') }}"></script>
         {% endblock %}
     </head>
-    <body background="{{ url_for('static', filename='images/bg.jpg') }}" style="background-size:cover">
+    <body>
         <div class="container">
             <div class="row">
                 <div class="col-lg-2">
                 </div>
-                <div class="col-lg-8" style="opacity:1">
+                <div class="col-lg-8">
                     <div id="content">{% block content %}{% endblock %}</div>
                 </div>
                 <div class="col-lg-2">
                 </div>
             </div>
         </div>    
+        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     </body>
 </html>
