Add time picker

--- a/noodle/templates/start.html
+++ b/noodle/templates/start.html
@@ -55,8 +55,10 @@
            <h3>Please select the time proposals for the meeting.</h3>
             <br/>
             <div class="row">
-                <div id="timedates">
-                </div>
+                <ul class="list-group">
+                    <div id="timedates">
+                    </div>
+                </ul>
             </div>
             <div class="row">
                 <button type="button" class="btn btn-secondary">Back</button>
