Add time selector

--- a/noodle/templates/start.html
+++ b/noodle/templates/start.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 <h1> Start a new Noodle here! </h1>
-<p>Fill the form bellow to get started.</p>
-    <br/>
-    <br/>
     <form>
-        <div id="first">
+        <div id="first" style="display:inline">
+            <p>Fill out the form bellow to get started.</p>
+            <br/>
+            <br/>
             <div class="form-group row">
                 <label for="Title" class="col-sm-2 col-form-label">Title</label>
                 <div class="col-sm-10">
@@ -36,9 +36,9 @@
                     <input type="text" name="email" class="form-control" id="email" placeholder="g.papadakis@antena.gr">
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Next</button>
+            <button type="submit" class="btn btn-primary" onclick="return showNext(2)">Next</button>
         </div>
-        <div id="second">
+        <div id="second" style="display:none">
            <h3>Please select the dates you want to set up a meeting.</h3>
             <br/>
             <div class="form-group">
@@ -47,11 +47,11 @@
                 </div>
             </div>
             <div class="row">
-                <button type="button" class="btn btn-secondary">Back</button>
-                <button type="button" class="btn btn-primary">Next</button>
+                <button type="button" class="btn btn-secondary" onclick="return showNext(1)">Back</button>
+                <button type="button" class="btn btn-primary" onclick="return showNext(3)">Next</button>
             </div>
         </div>
-        <div id="third">
+        <div id="third" style="display:none">
            <h3>Please select the time proposals for the meeting.</h3>
             <br/>
             <div class="row">
@@ -61,7 +61,7 @@
                 </ul>
             </div>
             <div class="row">
-                <button type="button" class="btn btn-secondary">Back</button>
+                <button type="button" class="btn btn-secondary" onclick="return showNext(2)">Back</button>
                 <button type="button" class="btn btn-primary">Next</button>
             </div>
         </div>
