Add Noodle favicon

--- a/noodle/templates/base.html
+++ b/noodle/templates/base.html
@@ -4,6 +4,7 @@
         {% block head %}
         <title>Noodle! a nice doodle!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap-datepicker.min.css') }}">
         <script src="{{ url_for('static', filename='bootstrap/js/jquery-2.2.4.min.js') }}"></script>
